@@ -17,13 +17,18 @@ import sqlalchemy as sa
 def upgrade():
     op.drop_table(u'User_Vacations')
 
+
 def downgrade():
-    ### commands auto generated by Alembic - please adjust! ###
-    op.create_table(u'User_Vacations',
-    sa.Column(u'user_id', sa.INTEGER(), autoincrement=False, nullable=False),
-    sa.Column(u'vacation_id', sa.INTEGER(), autoincrement=False, nullable=False),
-    sa.ForeignKeyConstraint(['user_id'], [u'Users.id'], name=u'User_Vacations_user_id_fkey'),
-    sa.ForeignKeyConstraint(['vacation_id'], [u'Vacations.id'], name=u'User_Vacations_vacation_id_fkey'),
-    sa.PrimaryKeyConstraint(u'user_id', u'vacation_id', name=u'User_Vacations_pkey')
+    op.create_table(
+        u'User_Vacations',
+        sa.Column(u'user_id', sa.INTEGER(), autoincrement=False,
+                  nullable=False),
+        sa.Column(u'vacation_id', sa.INTEGER(),
+                  autoincrement=False, nullable=False),
+        sa.ForeignKeyConstraint(['user_id'], [u'Users.id'],
+                                name=u'User_Vacations_user_id_fkey'),
+        sa.ForeignKeyConstraint(['vacation_id'], [u'Vacations.id'],
+                                name=u'User_Vacations_vacation_id_fkey'),
+        sa.PrimaryKeyConstraint(u'user_id', u'vacation_id',
+                                name=u'User_Vacations_pkey')
     )
-    ### end Alembic commands ###
